added validations spec for cart_item and total calculation

--- a/app/views/user_cart_items/index.html.erb
+++ b/app/views/user_cart_items/index.html.erb
@@ -15,22 +15,24 @@
         <div class="item-card" style="border: 1px solid blue; width: 500px;">
           <div class="item-details" style="display: flex; align-items: center; justify-content: space-between;">
             <h3><%= cart_item.item.name %></h3>
-            <h4 class="price">Price: $<%= number_with_precision(cart_item.total_price, precision: 2) %></h4>
+            <h4 class="price">Price: $<%= number_with_precision(cart_item.total, precision: 2) %></h4>
           </div>
           <div class="item-detail" style="">
             <h4>Sold By: <%= cart_item.item.sold_by %></h4>
             <h4>Quantity:
+            <% if false %>
               <%= form_with url: user_cart_item_path(current_user_cart), method: :patch, class: "d-inline" do %>
                 <%= hidden_field_tag :item_id, cart_item.id %>
                 <%= number_field_tag :quantity, cart_item.quantity, min: 1, class: "form-control" %>
                 <%= submit_tag "Update", class: "btn btn-success" %>
+              <% end %>
               <% end %>
             </h4>
             <h4>Brand: <%= cart_item.item.brand&.name %></h4>
             <h4>Category: <%= cart_item.item.category&.name %></h4>
           </div>
           <div class="item-actions">
-            <%= form_with url: user_cart_item_path(current_user_cart), method: :delete, class: "d-inline" do %>
+            <%= form_with url: user_cart_item_path(cart_item), method: :delete, class: "d-inline" do %>
               <%= hidden_field_tag :id, cart_item.id %>
               <%= submit_tag "remove", class: "btn btn-success" %>
             <% end %>
