--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -19,12 +19,20 @@
         <div class="item-card" style="border: 1px solid blue; width: 500px;">
           <div class="item-details" style="display: flex; align-items: center; justify-content: space-between;">
             <h3><%= item.name %></h3>
-            <h4 class="price">Sold By: <%= item.sold_by %></h4>
+            <div>
+              <h4 class="price">Sold By: <%= item.sold_by %></h4>
+              <% if item.weight? %>
+                <h4 class="price">Unit: <%= item.unit_weight %> <%= item.unit_weight_label&.humanize %></h4>
+              <% end %>
+            </div>
             <div class="price-container">
               <h4 class="price">Price: $<%= number_with_precision(item.price, precision: 2) %></h4>
               <% if item.promotion %>
-                <p class="price">Promotion: <%= item.promotion&.discount_type %></p>
-                <p class="price">Promotion: $<%= number_with_precision(item.promotion&.percent_off, precision: 2) %> <%= number_with_precision(item.promotion&.discount_type_text.humanize) %></p>
+                <p class="price">Promotion:
+                  <%= "$" if item.promotion&.percentage_discount? %>
+                  <%= number_with_precision(item.promotion&.percent_off, precision: 2) %> <%= "%" if !item.promotion&.percentage_discount? %>
+                  <%= number_with_precision(item.promotion&.discount_type_text.humanize) %>
+                </p>
               <% end %>
             </div>
           </div>
